--- a/dev/sass/_util.typo.scss
+++ b/dev/sass/_util.typo.scss
@@ -1,7 +1,12 @@
-/* 
+/*
  * Lunchpad Main Typo Styles
  * @author Joachim Fröstl <jf@19h13.com>
  */
+
+
+
+$lunch-typo-copy: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 
 h1 {
 	font: {
