--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -1,8 +1,9 @@
 /*
  * lunchpad. Global Variables
  * @author Joachim Fröstl <jf@19h13.com>
- */ 
+ */
 
+$lunch-color-white: #fff;
 $lunch-color-red: #FF0046;
 $lunch-color-red-dark: #C90037;
 $lunch-color-blu: #00B9E7;
@@ -14,11 +15,10 @@ $lunch-color-ylw-dark: #FFD600;
 $lunch-color-ylw-ligh: #FFFCEA;
 
 // Timer
-$lunch-time-over: 200ms;
+$lunch-time-over: 100ms;
 $lunch-time-out: 750ms;
 
 
 // Grid
 $lunch-grid-break-s: 680px;
 $lunch-grid-break-m: 960px;
-
