--- a/templates/page.app.angular.temp.html
+++ b/templates/page.app.angular.temp.html
@@ -52,14 +52,14 @@
 				</div>
 
 				<ul class="lunch-nav-list">
-					<li class="lunch-nav-elem lunch-timer">
-						<span>It's {{details.day}}</span>
-					</li>
 					<li class="lunch-nav-elem">
-						<a href="#/settings" class="lunch-fn-settings">Settings</a>
+						<a href="#/settings" class="lunch-fn-new">New Venue</a>
 					</li>
 					<li class="lunch-nav-elem">
 						<a href="#/venues" class="lunch-fn-xx">Venues</a>
+					</li>
+					<li class="lunch-nav-elem">
+						<a href="#/settings" class="lunch-fn-settings">Settings</a>
 					</li>
 					<li class="lunch-nav-elem">
 						<a href="/logout" class="lunch-fn-logout">Logout</a>
