improve: CSS on venuelist

--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -55,27 +55,20 @@
 				</div>
 
 				<ul class="lunch-nav-list">
-					<li class="lunch-nav-elem lunch-timer">
-						<span>It's {{details.day}}</span>
-					</li>
 					<li class="lunch-nav-elem">
-						<a href="#/settings" class="lunch-fn-settings">Settings</a>
+						<a href="#/settings" class="lunch-fn-new">New Venue</a>
 					</li>
 					<li class="lunch-nav-elem">
 						<a href="#/venues" class="lunch-fn-xx">Venues</a>
+					</li>
+					<li class="lunch-nav-elem">
+						<a href="#/settings" class="lunch-fn-settings">Settings</a>
 					</li>
 					<li class="lunch-nav-elem">
 						<a href="/logout" class="lunch-fn-logout">Logout</a>
 					</li>
 				</ul>
 
-				<!-- Notification Settings -->
-				<!--
-				<div class="lunch-fn-notify">
-					<input type="checkbox" id="notifications" class="lunch-inp-notify">
-					<label for="notifications">I like Emails!</label>
-				</div>
-				-->
 			</nav>
 
 		</header>
