--- a/templates/view.venuelist.html
+++ b/templates/view.venuelist.html
@@ -1,16 +1,15 @@
-<div class="lunch-venue-filter">
-	<form class="lunch-venue-filter-form">
-		<input type="text" class="lunch-venue-filter-input" id="lunch-venue-filter-input" placeholder="Filter Venues" ng-model="searchInput.name">
+<form class="lunch-venue-filter">
+		<input type="text" class="lunch-venue-filter-input" id="lunch-venue-filter-input" ng-model="searchInput.name">
 		<label for="lunch-venue-filter-input" class="lunch-venue-filter-btn">S</label>
-	</form>
-</div>
+</form>
+
 
 <div class="lunch-venues">
 
 	<div ng-repeat="venue in venues | filter:searchInput" class="lunch-venue anim-venue-slide">
 
-		<div class="lunch-venue-body">
-			
+		<div class="lunch-venue-wrapper">
+
 			<header class="lunch-venue-header">
 				<h2 class="lunch-venue-title" ng-click="goto('/venue/1')">{{venue.name}}</h2>
 				<span ng-show="venue.commentcount" class="lunch-venue-commentcount">
@@ -20,12 +19,9 @@
 			</header>
 
 			<div class="lunch-venue-guests" ng-show="venue.guests">
-
 				<div class="lunch-venue-guest anim-user-slide" ng-repeat="user in venue.guests">
-					<img width="40" height="80" src="{{user.ava}}" alt="" class="lunch-user-image" alt="{{user.nick}}">
-					<p class="anim-status-fade" ng-show="user.status">{{user.status}}</p>
+					<img src="{{user.ava}}" alt="" class="lunch-user-image" alt="{{user.nick}}">
 				</div>
-
 			</div>
 
 			<a ng-hide="venue.attending" href="" class="lunch-fn-attend">
@@ -34,8 +30,7 @@
 			<a ng-show="venue.attending" href="" class="lunch-fn-quit">
 				<span class="lunch-icon">N</span>
 			</a>
+
 		</div>
-
 	</div>
-
 </div>
