--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -14,6 +14,16 @@ $lunch-color-ylw: #FFEC88;
 $lunch-color-ylw-dark: #FFD600;
 $lunch-color-ylw-ligh: #FFFCEA;
 
+$lunch-clr-grey-xxlgt: #f7f7f7;
+$lunch-clr-grey-xlgt: #eee;
+$lunch-clr-grey-lgt: #ddd;
+$lunch-clr-grey: #999;
+
+$lunch-clr-blue: #00B9E7;
+
+$lunch-clr-red: #FF0046;
+$lunch-clr-red-drk: #C90037;
+
 // Timer
 $lunch-time-over: 100ms;
 $lunch-time-out: 750ms;
