--- a/templates/view.venuedetail.temp.html
+++ b/templates/view.venuedetail.temp.html
@@ -1,5 +1,5 @@
 <div class="lunch-view-venue">
-	
+
 	<header class="lunch-venue-header">
 		<a ng-click="goto('/venues')" class="lunch-fn-back">
 			<span class="lunch-icon">B</span>
@@ -7,112 +7,115 @@
 		</a>
 
 		<h1 class="lunch-venue-title">Scheidegger</h1>
-		<!-- <div class="lunch-venue-interaction"> -->
-	<div>
-		<a class="lunch-fn-menu">
-			<span class="lunch-icon">N</span>
-			<span href="" class="lunch-label">View Menu</span>
-		</a>
-		<a class="lunch-fn-invite">
-			<span class="lunch-icon">N</span>
-			<span href="" class="lunch-label">Invite</span>
-		</a>
-	</div>
+
+		<div>
+			<a class="lunch-fn-menu">
+				<span class="lunch-icon">N</span>
+				<span href="" class="lunch-label">View Menu</span>
+			</a>
+			<a class="lunch-fn-invite">
+				<span class="lunch-icon">N</span>
+				<span href="" class="lunch-label">Invite</span>
+			</a>
+		</div>
 
 
-	<div class="lunch-venue-guests" >
-		<!-- <p class="lunch-venue-commentcount"><span class="lunch-venue-commentcount-arrow">&nbsp;</span>We plan to lunch here!</p> -->
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+		<div class="lunch-venue-guests" >
+			<!-- <p class="lunch-venue-commentcount"><span class="lunch-venue-commentcount-arrow">&nbsp;</span>We plan to lunch here!</p> -->
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mk.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mrz.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<a ng-hide="venue.attending" class="lunch-fn-attend">
+				<span class="lunch-icon">Y</span>
+			</a>
+			<a ng-show="venue.attending" href="" class="lunch-fn-quit">
+				<!-- <span class="lunch-label">Cancel</span> -->
+				<span class="lunch-icon">N</span>
+			</a>
 		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mk.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mrz.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<a ng-hide="venue.attending" class="lunch-fn-attend">
-			<span class="lunch-icon">Y</span>
-		</a>
-		<a ng-show="venue.attending" href="" class="lunch-fn-quit">
-			<!-- <span class="lunch-label">Cancel</span> -->
-			<span class="lunch-icon">N</span>
-		</a>
-	</div>
+
+	</header>
 
 
-
-		</header>
-	<!-- </div> -->
 	<div class="lunch-comments">
-		
+
 		<div class="lunch-comments-list">
 			<div class="lunch-comment">
-				<div class="lunch-commentator">
-					<img width="40" height="80" src="../static/img/mk.png" alt="" class="lunch-user-image">
+				<div class="lunch-comment-info">
+					<div class="lunch-commentator-img">
+						<img src="../static/img/mk.png" alt="">
+					</div>
+					<time>11:35</time>
+					<h3>Smokey</h3>
 				</div>
-				<p class="lunch-comment-content">Hey, was geht? Wann gehma?</p>
+				<p>Hey, was geht? Wann gehma?</p>
 			</div>
 
 			<div class="lunch-comment">
-				<div class="lunch-commentator">
-					<img width="40" height="80" src="../static/img/mrz.png" alt="" class="lunch-user-image">
+				<div class="lunch-comment-info">
+					<div class="lunch-commentator-img">
+						<img src="../static/img/mrz.png" alt="" class="lunch-user-image">
+					</div>
+					<time>11:58</time>
+					<h3>Marius</h3>
 				</div>
 				<p class="lunch-comment-content">Wir gehen ins Arts'n Boards. Da gibts Burger. Kommt lieber mit uns mit!</p>
 			</div>
 
 
 			<form action="" class="lunch-comment lunch-comment-input">
-				<div class="lunch-commentator">
-					<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<div class="lunch-commentator-img">
+					<img src="../static/img/mr.png" alt="" class="lunch-user-image">
 				</div>
-					<textarea type="text" placeholder="Something to say?"></textarea>
-				
-					<div class="lunch-comment-interaction">
-						<a class="lunch-fn-comment-send">
-							<span class="lunch-icon">✓</span>
-							<span class="lunch-label">Post Comment</span>
-						</a>
-					</div>
+					<textarea type="text" placeholder="Got something to say?"></textarea>
+					<button class="lunch-fn-comment-send">
+						<span class="lunch-label">Post Comment</span>
+					</button>
 			</form>
 		</div>
 	</div>
