--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -20,6 +20,7 @@ $lunch-clr-grey-lgt: #ddd;
 $lunch-clr-grey: #999;
 
 $lunch-clr-blue: #00B9E7;
+$lunch-clr-blue-drk: #0083A3;
 
 $lunch-clr-red: #FF0046;
 $lunch-clr-red-drk: #C90037;
